--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -56,7 +56,7 @@ pricing:
     description: "zapiekanka z ziemniaka, glazurowane warzywa, krem z dyni, jarmuż, żurawinowy demi glace"
     price : "39 zł"
 
-  - title: "Pstrąg"
+  - title: "Pstrąg po lublelsku"
     description: "kalafior romanesco z czosnkiem i oliwą, kremowe puree z chrzanem, prażone chorizio, zioła, sos bisque"
     price : "41 zł"
 
